﻿drkns 05.05.2014 19:03:55 +0200 - build 3891

1. Уточнение 3890.

drkns 05.05.2014 18:52:24 +0200 - build 3890

1. Команда "title" добавляла лишний пробел в заголовок.

svs 05.05.2014 16:48:11 +0400 - build 3889

1. Уточнение build 3888
   1. Выключаем панели.
   2. title[Enter] --> в заголовке видим " - Far 3.0.3888 x86 Administrator", то-есть отсутствует показ папки панели.

svs 05.05.2014 12:38:16 +0400 - build 3888

1. Mantis#0002523: Команда title не отрабатывает при погашенных панелях

shmuel 04.05.2014 02:08:54 +0200 - build 3887

1. Откат 3885.

drkns 03.05.2014 19:13:31 +0200 - build 3886

1. Поиск по всем кодовым страницам не работал в x64.

2. Для поиска можно выбирать страницы из всего списка.

3. В поиск добавлена возможность поиска файлов, НЕ содержащих искомый текст.

4. Опция поиска в ADS перенесена в основной диалог.

5. Скрытая опция CollectFiles удалена.

6. Рефакторинг.

shmuel 03.05.2014 17:51:18 +0200 - build 3885

1. Экспериментально:
   Перед обработкой комстроки Фар передаёт её плагину LuaMacro, который вызывает глобальную функцию
   ProcessFarCommandLine(CmdLine), если таковая существует. Если функция не существует, либо возвращает
   false/nil/ничего, Фар продолжает обработку комстроки. Если возвращает стринг, то Фар обрабатывает
   его как новое значение комстроки. Если возвращает true, дальнейшая обработка комстроки Фаром не
   производится.

zg 02.05.2014 03:16:49 +0200 - build 3884

1. откат 3883.

zg 01.05.2014 12:28:01 +0200 - build 3883

1. 0002657: Некорректная работа при изменении последней строки файла из плагина.

svs 28.04.2014 16:43:42 +0400 - build 3882

1. По мотивам Mantis#2562.
   - убрана помесь из ECC_* и XC_*
   - добавлены XC_ALREADY_EXISTS, XC_OPEN_NEWINSTANCE и XC_RELOAD.
   - в FileEditor уточнение по кодам возврата в зависимости от EF_OPENMODE_*
   - в API::Editor новые коды возврата пока не позиционируются (ограничены макросом MANTIS_0002562);